--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@hookform/resolvers": "^3.9.0",
+    "@popperjs/core": "^2.11.8",
     "@reduxjs/toolkit": "^2.2.6",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
@@ -19,6 +23,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-redux": "^9.1.2",
+    "react-toastify": "^10.0.5",
     "sass": "^1.77.8",
     "zod": "^3.23.8"
   },
